Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Introduction"
+title: "Introduction - das ist nur ein Test"
 description: "Welcome to the new home for your documentation. Ok. Here, I can change something. "
 ---
 
