Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Introduction - das ist nur ein Test"
-description: "Welcome to the new home for your documentation. Ok. Here, I can change something. "
+title: "Introduction"
+description: "Welcome to the new home for your documentation."
 ---
 
 ## Setting up
 
-Get your documentation site up and running NOT in minutes. 
+Get your documentation site up and running NOT in minutes.
 
 <Card title="Start here" icon="rocket" horizontal href="/quickstart">
   Follow our three step quickstart guide.
