--- a/api-reference/endpoint/get.mdx
+++ b/api-reference/endpoint/get.mdx
@@ -1,4 +1,5 @@
 ---
-title: 'Get Plants'
-openapi: 'GET /plants'
+title: "Get Plants"
+openapi: "GET /plants"
+description: "Ok. Hier schreiben wir mal ein bisschen was. Mal gespannt, was passier.t "
 ---
