--- a/api-reference/endpoint/asdf.mdx
+++ b/api-reference/endpoint/asdf.mdx
@@ -1,4 +1,8 @@
 ---
-title: 'Asdf'
-openapi: 'POST /plant/asdf'
+title: "Asdf"
+openapi: "POST /plant/asdf"
 ---
+
+> jwfjbejbf
+
+![Favicon Sv](/favicon.svg)
