Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/asdf.mdx
+++ b/api-reference/endpoint/asdf.mdx
@@ -1,8 +1,12 @@
 ---
 title: "Asdf"
-openapi: "POST /plant/asdf"
+openapi: "POST /plants"
 ---
 
 > jwfjbejbf
 
-![Favicon Sv](/favicon.svg)
+<img
+  src="/favicon.svg"
+  alt="Favicon Sv"
+  style={{ width:"55%" }}
+/>
