Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/asdf.mdx
+++ b/api-reference/endpoint/asdf.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Asdf"
+openapi: "POST /plants"
 ---
 
 > jwfjbejbf
@@ -12,5 +13,5 @@ title: "Asdf"
 
 
 ---
-openapi: "GET /pet"
+openapi: "GET /plants"
 ---
