Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/users/overview.mdx
+++ b/api-reference/endpoint/users/overview.mdx
@@ -1,5 +1,9 @@
 ---
-title: 'Users Overview'
-description: 'Everything about users.'
+title: "Users Overview"
+description: "Everything about users."
 ---
 
+- This is a list item
+- Followed by another item
+
+![Light Sv](/logo/light.svg)
