--- a/api-reference/endpoint/intro/introduction.mdx
+++ b/api-reference/endpoint/intro/introduction.mdx
@@ -5,7 +5,7 @@ description: "Let's get you up to speed on the basics of using the Helo API"
 
 ## **Base URL**
 
-The Helo API is built on **REST **principles. It's using the following base URL:
+The Helo API is built on REST principles. It's using the following base URL:
 
 ```text
 https://api.helo.com
@@ -13,15 +13,15 @@ https://api.helo.com
 
 ## **Authentication**
 
-To authenticate you need to add an `Authorization` header with the contents of the header being`Bearer re_xxxxxxxxx`where`re_xxxxxxxxx`is your[**API Key**](https://resend.com/api-keys).
+To authenticate, you need to add an `Authorization` header:
 
 ```text
-Authorization: Bearer re_xxxxxxxxx
+Authorization: Bearer xxxxx
 ```
 
 ## **Response codes**
 
-Resend uses standard HTTP codes to indicate the success or failure of your [requests.In](http://requests.In) general,`2xx`HTTP codes correspond to success,`4xx`codes are for user-related failures, and`5xx`codes are for infrastructure issues.
+To show you if your requests to Helo were successful (or not), we're using standard HTTP codes. 
 
 | **Status** | **Description**                         |
 | :--------- | :-------------------------------------- |
@@ -31,10 +31,6 @@ Resend uses standard HTTP codes to indicate the success or failure of your [requ
 | `403`      | The API key used was invalid.           |
 | `404`      | The resource was not found.             |
 | `429`      | The rate limit was exceeded.            |
-| `5xx`      | Indicates an error with Resend servers. |
-
-Check [**Error Codes**](https://resend.com/docs/api-reference/errors) for a comprehensive breakdown of all possible API errors.
+| `5xx`      | Indicates an error with Helo servers.   |
 
 ## **Rate limit**
-
-The default maximum rate limit is**2 requests per second**. This number can be increased for trusted senders by request. After that, you’ll hit the rate limit and receive a`429`response error code.Learn more about our [**rate limits**](https://resend.com/docs/api-reference/rate-limit).
