--- a/index.mdx
+++ b/index.mdx
@@ -1,19 +1,11 @@
 ---
 title: "Introduction"
-description: "Welcome to the new home for your documentation."
+description: "This is the one-stop shop to get you up and running with Helo. "
 ---
-
-## Setting up
-
-Get your documentation site up and running NOT in minutes.
-
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
-  Follow our three step quickstart guide.
-</Card>
 
 ## Getting started
 
-Design a docs site that looks great and empowers your users.
+Here are the most important resources to help you get started.
 
 <Columns cols={2}>
   <Card title="API documentation" icon="terminal" iconType="solid" href="/api" cta="Read the docs ">
@@ -33,28 +25,3 @@ Design a docs site that looks great and empowers your users.
     
   </Card>
 </Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
-</Card>
